--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -2,6 +2,7 @@
 image=ghcr.io/ublue-os/fedora-toolbox:latest
 pull=true
 additional_packages="kitty zsh"
+init_hooks=curl -sSL https://raw.githubusercontent.com/StevenBuglione/distrobox-init/refs/heads/main/distro/fedora/config.sh | bash;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/xdg-open;
