--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -9,3 +9,4 @@ init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/xdg-open;
 exported_apps="kitty"
 exported_bins="/usr/bin/git"
 exported_bins_path="~/.local/bin"
+start_now=true
