--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -7,5 +7,8 @@ init_hooks=curl -sSL https://raw.githubusercontent.com/StevenBuglione/distrobox-
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/xdg-open;
+init_hooks=ln -sf /usr/bin/distrobox-host-exec /bin/git;
 exported_apps="kitty"
 start_now=true
+
+
