--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -1,8 +1,9 @@
-[fedora]
+[mars]
 image=ghcr.io/ublue-os/fedora-toolbox:latest
 pull=true
 nvidia=true
 additional_packages="kitty zsh"
+home=/home/sbuglione/distro/fedora/fedora-41-main/sbuglione
 init_hooks=curl -sSL https://raw.githubusercontent.com/StevenBuglione/distrobox-init/refs/heads/main/distro/fedora/config.sh | bash;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
