--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -8,6 +8,7 @@ init_hooks=curl -sSL https://raw.githubusercontent.com/StevenBuglione/distrobox-
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/xdg-open;
+init_hooks=ln -sf /usr/bin/distrobox-host-exec /bin/distrobox;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /bin/git;
 exported_apps="kitty"
 start_now=true
