Working Config Boot strap and exits if already configured

--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -4,11 +4,12 @@ pull=true
 nvidia=true
 additional_packages="kitty zsh"
 home=/home/sbuglione/distro/fedora/fedora-41-main/sbuglione
-init_hooks=curl -sSL https://raw.githubusercontent.com/StevenBuglione/distrobox-init/refs/heads/main/distro/fedora/config.sh | bash;
+init_hooks=cat /home/sbuglione/test/distrobox-init/distro/fedora/config.sh | bash
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/xdg-open;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /bin/git;
+init_hooks=ln -sf /usr/bin/distrobox-host-exec /bin/distrobox;
 exported_apps="kitty"
 start_now=true
 
