Feature Box Config

--- a/distro/fedora/fedora-box.ini
+++ b/distro/fedora/fedora-box.ini
@@ -1,9 +1,9 @@
-[mars]
+[mars-1]
 image=ghcr.io/ublue-os/fedora-toolbox:latest
 pull=true
 nvidia=true
 additional_packages="kitty zsh"
-home=/home/sbuglione/distro/fedora/fedora-41-main/sbuglione
+home=/home/sbuglione/distro/fedora/fedora-41-main-1/sbuglione
 init_hooks=cat /home/sbuglione/test/distrobox-init/distro/fedora/config.sh | bash
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/flatpak;
 init_hooks=ln -sf /usr/bin/distrobox-host-exec /usr/local/bin/podman;
